--- a/index.html
+++ b/index.html
@@ -81,135 +81,149 @@
 
   <main class="main">
 
-    <!-- Hero Section -->
-    <section id="hero" class="hero section dark-background">
+    <!-- 遊戲技能區塊 -->
+<section id="skills" class="skills section">
 
-      <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
-        <h2>Hi, I'm Alice!</h2>
-        <p>I am a graphic designer living in New York<br></p>
-        <a href="#about" class="btn-scroll" title="Scroll Down"><i class="bi bi-chevron-down"></i></a>
-      </div>
+  <!-- 區塊標題 -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>遊戲技能</h2>
+    <p>了解荒野亂鬥中的核心技能，讓你成為戰場上的贏家！</p>
+  </div><!-- 區塊標題結束 -->
 
-    </section><!-- /Hero Section -->
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-    <!-- About Section -->
-    <section id="about" class="about section">
+    <div class="row skills-content skills-animation">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>About</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
+      <div class="col-lg-6">
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row gy-4 justify-content-center">
-          <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+        <div class="progress">
+          <span class="skill"><span>英雄操控</span> <i class="val">100%</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
-          <div class="col-lg-8 content">
-            <h2>UI/UX Designer &amp; Web Developer.</h2>
-            <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
-            <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-                </ul>
-              </div>
-            </div>
-            <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
-            </p>
+        </div><!-- 技能項目結束 -->
+
+        <div class="progress">
+          <span class="skill"><span>戰術運用</span> <i class="val">90%</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
-        </div>
+        </div><!-- 技能項目結束 -->
+
+        <div class="progress">
+          <span class="skill"><span>快速反應</span> <i class="val">75%</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div><!-- 技能項目結束 -->
 
       </div>
 
-    </section><!-- /About Section -->
+      <div class="col-lg-6">
 
-    <!-- Skills Section -->
-    <section id="skills" class="skills section">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Skills</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row skills-content skills-animation">
-
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill"><span>HTML</span> <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>CSS</span> <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>JavaScript</span> <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
+        <div class="progress">
+          <span class="skill"><span>團隊合作</span> <i class="val">85%</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
+        </div><!-- 技能項目結束 -->
 
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill"><span>PHP</span> <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>WordPress/CMS</span> <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>Photoshop</span> <i class="val">55%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
+        <div class="progress">
+          <span class="skill"><span>地圖熟悉度</span> <i class="val">90%</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
+        </div><!-- 技能項目結束 -->
 
-        </div>
+        <div class="progress">
+          <span class="skill"><span>英雄搭配</span> <i class="val">70%</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div><!-- 技能項目結束 -->
 
       </div>
 
-    </section><!-- /Skills Section -->
+    </div>
+
+  </div>
+
+</section><!-- /遊戲技能區塊 -->
+
+<!-- 遊戲歷程區塊 -->
+<section id="resume" class="resume section light-background">
+
+  <!-- 區塊標題 -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>遊戲歷程</h2>
+    <p>探索荒野亂鬥的發展歷程與成功之路。</p>
+  </div><!-- 區塊標題結束 -->
+
+  <div class="container">
+
+    <div class="row">
+
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+        <h3 class="resume-title">遊戲概述</h3>
+
+        <div class="resume-item pb-0">
+          <h4>荒野亂鬥</h4>
+          <p><em>一款融合策略與動作的多人手機遊戲，擁有全球數百萬玩家的熱愛。</em></p>
+          <ul>
+            <li>發行日期：2018 年 12 月 12 日</li>
+            <li>開發商：Supercell</li>
+            <li>平台：iOS &amp; Android</li>
+          </ul>
+        </div><!-- 結束遊戲概述 -->
+
+        <h3 class="resume-title">遊戲特色</h3>
+        <div class="resume-item">
+          <h4>快節奏戰鬥</h4>
+          <h5>提供多種模式</h5>
+          <p><em>包括生存戰、寶石爭奪戰和團隊作戰，讓玩家體驗無盡的樂趣。</em></p>
+          <p>每場遊戲僅需數分鐘，適合隨時隨地遊玩。</p>
+        </div><!-- 結束遊戲特色 -->
+
+        <div class="resume-item">
+          <h4>英雄角色</h4>
+          <h5>獨特技能與能力</h5>
+          <p><em>每位英雄擁有獨特技能，玩家可選擇適合自己風格的角色。</em></p>
+          <p>不斷解鎖新角色，並提升英雄等級，成為戰場上的霸主！</p>
+        </div><!-- 結束遊戲特色 -->
+
+      </div>
+
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+        <h3 class="resume-title">玩家回饋</h3>
+        <div class="resume-item">
+          <h4>全球玩家的喜愛</h4>
+          <h5>2019 年 - 現在</h5>
+          <p><em>玩家數據顯示，荒野亂鬥獲得了極高的下載量與好評。</em></p>
+          <ul>
+            <li>超過 1 億次下載</li>
+            <li>App Store 和 Google Play 上多次獲得編輯推薦</li>
+            <li>玩家社群活躍，頻繁舉辦比賽與活動</li>
+          </ul>
+        </div><!-- 結束玩家回饋 -->
+
+        <div class="resume-item">
+          <h4>未來展望</h4>
+          <h5>持續更新與優化</h5>
+          <p><em>Supercell 承諾為荒野亂鬥持續推出新內容，讓玩家保持新鮮感。</em></p>
+          <ul>
+            <li>增加更多英雄角色與地圖</li>
+            <li>優化遊戲平衡性</li>
+            <li>增強社群互動功能</li>
+          </ul>
+        </div><!-- 結束未來展望 -->
+
+      </div>
+
+    </div>
+
+  </div>
+
+</section><!-- /遊戲歷程區塊 -->
 
     <!-- Resume Section -->
     <section id="resume" class="resume section light-background">
