--- a/index.html
+++ b/index.html
@@ -81,150 +81,203 @@
 
   <main class="main">
 
-   <!-- 遊戲技能區塊 -->
-<section id="skills" class="skills section">
+   </section><!-- /Hero Section -->
 
-  <!-- 區塊標題 -->
-  <div class="container section-title" data-aos="fade-up">
-    <h2>遊戲技能</h2>
-    <p>了解荒野亂鬥中的核心技能，讓你成為戰場上的贏家！</p>
-  </div><!-- 區塊標題結束 -->
+    <!-- About Section -->
+    <section id="about" class="about section">
 
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>About</h2>
+        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+      </div><!-- End Section Title -->
 
-    <div class="row skills-content skills-animation">
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-      <div class="col-lg-6">
-
-        <div class="progress">
-          <span class="skill"><span>英雄操控</span> <i class="val">100%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+        <div class="row gy-4 justify-content-center">
+          <div class="col-lg-4">
+            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
-        </div><!-- 技能項目結束 -->
-
-        <div class="progress">
-          <span class="skill"><span>戰術運用</span> <i class="val">90%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+          <div class="col-lg-8 content">
+            <h2>UI/UX Designer &amp; Web Developer.</h2>
+            <p class="fst-italic py-3">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+              magna aliqua.
+            </p>
+            <div class="row">
+              <div class="col-lg-6">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                </ul>
+              </div>
+              <div class="col-lg-6">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                </ul>
+              </div>
+            </div>
+            <p class="py-3">
+              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
+              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+            </p>
           </div>
-        </div><!-- 技能項目結束 -->
-
-        <div class="progress">
-          <span class="skill"><span>快速反應</span> <i class="val">75%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div><!-- 技能項目結束 -->
+        </div>
 
       </div>
 
-      <div class="col-lg-6">
+    </section><!-- /About Section -->
 
-        <div class="progress">
-          <span class="skill"><span>團隊合作</span> <i class="val">85%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div><!-- 技能項目結束 -->
+    <!-- Skills Section -->
+    <section id="skills" class="skills section">
 
-        <div class="progress">
-          <span class="skill"><span>地圖熟悉度</span> <i class="val">90%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div><!-- 技能項目結束 -->
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Skills</h2>
+        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+      </div><!-- End Section Title -->
 
-        <div class="progress">
-          <span class="skill"><span>英雄搭配</span> <i class="val">70%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row skills-content skills-animation">
+
+          <div class="col-lg-6">
+
+            <div class="progress">
+              <span class="skill"><span>HTML</span> <i class="val">100%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>CSS</span> <i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>JavaScript</span> <i class="val">75%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
           </div>
-        </div><!-- 技能項目結束 -->
+
+          <div class="col-lg-6">
+
+            <div class="progress">
+              <span class="skill"><span>PHP</span> <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>WordPress/CMS</span> <i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Photoshop</span> <i class="val">55%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+          </div>
+
+        </div>
 
       </div>
 
-    </div>
+    </section><!-- /Skills Section -->
 
-  </div>
+    <!-- Resume Section -->
+    <section id="resume" class="resume section light-background">
 
-</section><!-- /遊戲技能區塊 -->
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Resume</h2>
+        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+      </div><!-- End Section Title -->
 
-<!-- 遊戲歷程區塊 -->
-<section id="resume" class="resume section light-background">
+      <div class="container">
 
-  <!-- 區塊標題 -->
-  <div class="container section-title" data-aos="fade-up">
-    <h2>遊戲歷程</h2>
-    <p>探索荒野亂鬥的發展歷程與成功之路。</p>
-  </div><!-- 區塊標題結束 -->
+        <div class="row">
 
-  <div class="container">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="resume-title">Sumary</h3>
 
-    <div class="row">
+            <div class="resume-item pb-0">
+              <h4>Brandon Johnson</h4>
+              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <ul>
+                <li>Portland par 127,Orlando, FL</li>
+                <li>(123) 456-7891</li>
+                <li>alice.barkley@example.com</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
 
-      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-        <h3 class="resume-title">遊戲概述</h3>
+            <h3 class="resume-title">Education</h3>
+            <div class="resume-item">
+              <h4>Master of Fine Arts &amp; Graphic Design</h4>
+              <h5>2015 - 2016</h5>
+              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+            </div><!-- Edn Resume Item -->
 
-        <div class="resume-item pb-0">
-          <h4>荒野亂鬥</h4>
-          <p><em>一款融合策略與動作的多人手機遊戲，擁有全球數百萬玩家的熱愛。</em></p>
-          <ul>
-            <li>發行日期：2018 年 12 月 12 日</li>
-            <li>開發商：Supercell</li>
-            <li>平台：iOS &amp; Android</li>
-          </ul>
-        </div><!-- 結束遊戲概述 -->
+            <div class="resume-item">
+              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
+              <h5>2010 - 2014</h5>
+              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+            </div><!-- Edn Resume Item -->
 
-        <h3 class="resume-title">遊戲特色</h3>
-        <div class="resume-item">
-          <h4>快節奏戰鬥</h4>
-          <h5>提供多種模式</h5>
-          <p><em>包括生存戰、寶石爭奪戰和團隊作戰，讓玩家體驗無盡的樂趣。</em></p>
-          <p>每場遊戲僅需數分鐘，適合隨時隨地遊玩。</p>
-        </div><!-- 結束遊戲特色 -->
+          </div>
 
-        <div class="resume-item">
-          <h4>英雄角色</h4>
-          <h5>獨特技能與能力</h5>
-          <p><em>每位英雄擁有獨特技能，玩家可選擇適合自己風格的角色。</em></p>
-          <p>不斷解鎖新角色，並提升英雄等級，成為戰場上的霸主！</p>
-        </div><!-- 結束遊戲特色 -->
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+            <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item">
+              <h4>Senior graphic design specialist</h4>
+              <h5>2019 - Present</h5>
+              <p><em>Experion, New York, NY </em></p>
+              <ul>
+                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
+                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
+                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
+                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Graphic design specialist</h4>
+              <h5>2017 - 2018</h5>
+              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <ul>
+                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
+                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
+                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
+                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+          </div>
+
+        </div>
 
       </div>
 
-      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-        <h3 class="resume-title">玩家回饋</h3>
-        <div class="resume-item">
-          <h4>全球玩家的喜愛</h4>
-          <h5>2019 年 - 現在</h5>
-          <p><em>玩家數據顯示，荒野亂鬥獲得了極高的下載量與好評。</em></p>
-          <ul>
-            <li>超過 1 億次下載</li>
-            <li>App Store 和 Google Play 上多次獲得編輯推薦</li>
-            <li>玩家社群活躍，頻繁舉辦比賽與活動</li>
-          </ul>
-        </div><!-- 結束玩家回饋 -->
-
-        <div class="resume-item">
-          <h4>未來展望</h4>
-          <h5>持續更新與優化</h5>
-          <p><em>Supercell 承諾為荒野亂鬥持續推出新內容，讓玩家保持新鮮感。</em></p>
-          <ul>
-            <li>增加更多英雄角色與地圖</li>
-            <li>優化遊戲平衡性</li>
-            <li>增強社群互動功能</li>
-          </ul>
-        </div><!-- 結束未來展望 -->
-
-      </div>
-
-    </div>
-
-  </div>
-
-</section><!-- /遊戲歷程區塊 -->
-
+    </section><!-- /Resume Section -->
 
     <!-- Services Section -->
     <section id="services" class="services section">
