--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
 
   <main class="main">
 
+  <!-- Hero Section -->
+    <section id="hero" class="hero section dark-background">
+
+      <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
+        <h2>Hi, I'm Alice!</h2>
+        <p>I am a graphic designer living in New York<br></p>
+        <a href="#about" class="btn-scroll" title="Scroll Down"><i class="bi bi-chevron-down"></i></a>
+      </div>
+      
    </section><!-- /Hero Section -->
 
     <!-- About Section -->
