--- a/index.html
+++ b/index.html
@@ -82,65 +82,58 @@
   <main class="main">
 
   <!-- Hero Section -->
-    <section id="hero" class="hero section dark-background">
+<section id="hero" class="hero section dark-background">
+  <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
+    <h2>Welcome to Brawl Stars!</h2>
+    <p>An exciting multiplayer battle game<br>Join the brawl and prove your skills!</p>
+    <a href="#about" class="btn-scroll" title="Scroll Down"><i class="bi bi-chevron-down"></i></a>
+  </div>
+</section><!-- /Hero Section -->
 
-      <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
-        <h2>Hi, I'm Alice!</h2>
-        <p>I am a graphic designer living in New York<br></p>
-        <a href="#about" class="btn-scroll" title="Scroll Down"><i class="bi bi-chevron-down"></i></a>
+<!-- About Section -->
+<section id="about" class="about section">
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>About Brawl Stars</h2>
+    <p>A fast-paced multiplayer battle game by Supercell</p>
+  </div><!-- End Section Title -->
+
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <div class="row gy-4 justify-content-center">
+      <div class="col-lg-4">
+        <img src="assets/img/brawl-stars-logo.jpg" class="img-fluid" alt="Brawl Stars Logo">
       </div>
-      
-   </section><!-- /Hero Section -->
-
-    <!-- About Section -->
-    <section id="about" class="about section">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>About</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row gy-4 justify-content-center">
-          <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+      <div class="col-lg-8 content">
+        <h2>Multiplayer Battles &amp; Unique Characters</h2>
+        <p class="fst-italic py-3">
+          Join millions of players worldwide in quick and action-packed battles. Choose from a variety of Brawlers, each with their unique abilities and playstyles.
+        </p>
+        <div class="row">
+          <div class="col-lg-6">
+            <ul>
+              <li><i class="bi bi-chevron-right"></i> <strong>Developer:</strong> <span>Supercell</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Release Date:</strong> <span>December 12, 2018</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Platform:</strong> <span>iOS, Android</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Genre:</strong> <span>Multiplayer, Action</span></li>
+            </ul>
           </div>
-          <div class="col-lg-8 content">
-            <h2>UI/UX Designer &amp; Web Developer.</h2>
-            <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
-            <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-                </ul>
-              </div>
-            </div>
-            <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
-            </p>
+          <div class="col-lg-6">
+            <ul>
+              <li><i class="bi bi-chevron-right"></i> <strong>Game Modes:</strong> <span>Solo, Duo, Team</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Global Downloads:</strong> <span>Over 200M+</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Rating:</strong> <span>4.5/5</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Status:</strong> <span>Active</span></li>
+            </ul>
           </div>
         </div>
-
+        <p class="py-3">
+          Dive into a world of dynamic battle arenas, power-ups, and customizable characters. From solo showdowns to thrilling team battles, the action never stops in Brawl Stars. Be strategic, team up with friends, and rise to the top of the leaderboard!
+        </p>
       </div>
+    </div>
+  </div>
+</section><!-- /About Section -->
 
-    </section><!-- /About Section -->
 
     <!-- Skills Section -->
     <section id="skills" class="skills section">
