--- a/index.html
+++ b/index.html
@@ -205,133 +205,129 @@
 </section><!-- /Skills Section -->
 
 
-    <!-- Resume Section -->
-    <section id="resume" class="resume section light-background">
+   <!-- Resume Section -->
+<section id="resume" class="resume section light-background">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Resume</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Brawler Background</h2>
+    <p>Learn about the unique stories and personalities of your favorite Brawlers!</p>
+  </div><!-- End Section Title -->
 
-      <div class="container">
+  <div class="container">
 
-        <div class="row">
+    <div class="row">
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Sumary</h3>
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+        <h3 class="resume-title">Brawler Spotlight</h3>
 
-            <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
-            </div><!-- Edn Resume Item -->
+        <div class="resume-item pb-0">
+          <h4>Shelly</h4>
+          <p><em>The shotgun-wielding adventurer who protects her allies with precise attacks and a strong sense of justice.</em></p>
+          <ul>
+            <li>Origin: Western Outlands</li>
+            <li>Special Ability: Super Shell Blast</li>
+            <li>Role: Balanced Fighter</li>
+          </ul>
+        </div><!-- End Resume Item -->
 
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-            </div><!-- Edn Resume Item -->
+        <h3 class="resume-title">Legendary Brawlers</h3>
+        <div class="resume-item">
+          <h4>Spike</h4>
+          <h5>Specialist in AoE Damage</h5>
+          <p><em>A mischievous cactus that throws explosive spikes to scatter enemies and control the battlefield.</em></p>
+          <p>Spike thrives in team fights with his area-control abilities, making him a formidable foe.</p>
+        </div><!-- End Resume Item -->
 
-            <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
-            </div><!-- Edn Resume Item -->
-
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
-            </div><!-- Edn Resume Item -->
-
-            <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
-            </div><!-- Edn Resume Item -->
-
-          </div>
-
-        </div>
+        <div class="resume-item">
+          <h4>Crow</h4>
+          <h5>Master of Poison</h5>
+          <p><em>A sleek assassin who specializes in dealing damage over time while evading attacks.</em></p>
+          <p>Crow's speed and poison daggers make him a nightmare for any unprepared opponent.</p>
+        </div><!-- End Resume Item -->
 
       </div>
 
-    </section><!-- /Resume Section -->
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+        <h3 class="resume-title">Fan-Favorite Modes</h3>
+        <div class="resume-item">
+          <h4>Solo Showdown</h4>
+          <h5>Survival Mode</h5>
+          <p><em>Compete against 9 other players in a thrilling last-man-standing fight.</em></p>
+          <ul>
+            <li>Fight for energy cubes to power up your Brawler.</li>
+            <li>Adapt your strategy to the ever-shrinking map.</li>
+          </ul>
+        </div><!-- End Resume Item -->
 
-    <!-- Services Section -->
-    <section id="services" class="services section">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Services</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
-
-      <div class="container">
-
-        <div class="row gy-4">
-
-          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-activity icon"></i></div>
-              <h4><a href="" class="stretched-link">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
-            <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-bounding-box-circles icon"></i></div>
-              <h4><a href="" class="stretched-link">Sed ut perspici</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
-            <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-calendar4-week icon"></i></div>
-              <h4><a href="" class="stretched-link">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
-            <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-broadcast icon"></i></div>
-              <h4><a href="" class="stretched-link">Nemo Enim</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
-            </div>
-          </div><!-- End Service Item -->
-
-        </div>
+        <div class="resume-item">
+          <h4>Gem Grab</h4>
+          <h5>Team Strategy Mode</h5>
+          <p><em>Work with your team to collect and hold 10 gems while fending off opponents.</em></p>
+          <ul>
+            <li>Combine roles for effective teamwork.</li>
+            <li>Outsmart the opposing team to secure victory!</li>
+          </ul>
+        </div><!-- End Resume Item -->
 
       </div>
 
-    </section><!-- /Services Section -->
+    </div>
+
+  </div>
+
+</section><!-- /Resume Section -->
+<!-- Services Section -->
+<section id="services" class="services section">
+
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Game Highlights</h2>
+    <p>Discover the diverse gameplay features that make Brawl Stars unique!</p>
+  </div><!-- End Section Title -->
+
+  <div class="container">
+
+    <div class="row gy-4">
+
+      <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
+        <div class="service-item position-relative">
+          <div class="icon"><i class="bi bi-controller icon"></i></div>
+          <h4><a href="" class="stretched-link">Diverse Brawlers</a></h4>
+          <p>Unlock a variety of Brawlers, each with unique abilities and playstyles.</p>
+        </div>
+      </div><!-- End Service Item -->
+
+      <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
+        <div class="service-item position-relative">
+          <div class="icon"><i class="bi bi-trophy icon"></i></div>
+          <h4><a href="" class="stretched-link">Competitive Matches</a></h4>
+          <p>Engage in fast-paced matches where every second counts.</p>
+        </div>
+      </div><!-- End Service Item -->
+
+      <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
+        <div class="service-item position-relative">
+          <div class="icon"><i class="bi bi-people icon"></i></div>
+          <h4><a href="" class="stretched-link">Team Battles</a></h4>
+          <p>Form alliances and dominate the battlefield with your friends.</p>
+        </div>
+      </div><!-- End Service Item -->
+
+      <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
+        <div class="service-item position-relative">
+          <div class="icon"><i class="bi bi-stars icon"></i></div>
+          <h4><a href="" class="stretched-link">Special Events</a></h4>
+          <p>Participate in exciting limited-time events and earn exclusive rewards.</p>
+        </div>
+      </div><!-- End Service Item -->
+
+    </div>
+
+  </div>
+
+</section><!-- /Services Section -->
+
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio section light-background">
