--- a/index.html
+++ b/index.html
@@ -329,13 +329,13 @@
 </section><!-- /Services Section -->
 
 
-  <!-- Portfolio Section -->
+<!-- Portfolio Section -->
 <section id="portfolio" class="portfolio section light-background">
 
   <!-- Section Title -->
   <div class="container section-title" data-aos="fade-up">
-    <h2>Portfolio</h2>
-    <p>Explore our diverse range of projects, showcasing creativity and expertise.</p>
+    <h2>荒野亂鬥作品集</h2>
+    <p>探索我們的荒野亂鬥主題創意作品，展示獨特的設計與專業技術。</p>
   </div><!-- End Section Title -->
 
   <div class="container">
@@ -343,41 +343,41 @@
     <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
       <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
-        <li data-filter="*" class="filter-active">All</li>
-        <li data-filter=".filter-app">App</li>
-        <li data-filter=".filter-product">Card</li>
-        <li data-filter=".filter-branding">Web</li>
+        <li data-filter="*" class="filter-active">全部</li>
+        <li data-filter=".filter-brawlers">英雄</li>
+        <li data-filter=".filter-maps">地圖</li>
+        <li data-filter=".filter-events">活動</li>
       </ul><!-- End Portfolio Filters -->
 
       <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-          <img src="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" class="img-fluid" alt="Portfolio App 1">
+        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-brawlers">
+          <img src="assets/img/masonry-portfolio/brawler-1.jpg" class="img-fluid" alt="荒野亂鬥英雄1">
           <div class="portfolio-info">
-            <h4>App 1</h4>
-            <p>Innovative mobile solutions for everyday tasks.</p>
-            <a href="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-            <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+            <h4>英雄 1</h4>
+            <p>荒野亂鬥中的經典角色設計。</p>
+            <a href="assets/img/masonry-portfolio/brawler-1.jpg" title="英雄 1" data-gallery="portfolio-gallery-brawlers" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            <a href="portfolio-details.html" title="更多細節" class="details-link"><i class="bi bi-link-45deg"></i></a>
           </div>
         </div><!-- End Portfolio Item -->
 
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-          <img src="assets/img/masonry-portfolio/masonry-portfolio-2.jpg" class="img-fluid" alt="Portfolio Product 1">
+        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-maps">
+          <img src="assets/img/masonry-portfolio/map-1.jpg" class="img-fluid" alt="荒野亂鬥地圖1">
           <div class="portfolio-info">
-            <h4>Product 1</h4>
-            <p>Exceptional design and craftsmanship in every card.</p>
-            <a href="assets/img/masonry-portfolio/masonry-portfolio-2.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-            <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+            <h4>地圖 1</h4>
+            <p>設計巧妙的戰鬥場景。</p>
+            <a href="assets/img/masonry-portfolio/map-1.jpg" title="地圖 1" data-gallery="portfolio-gallery-maps" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            <a href="portfolio-details.html" title="更多細節" class="details-link"><i class="bi bi-link-45deg"></i></a>
           </div>
         </div><!-- End Portfolio Item -->
 
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-          <img src="assets/img/masonry-portfolio/masonry-portfolio-3.jpg" class="img-fluid" alt="Portfolio Web 1">
+        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-events">
+          <img src="assets/img/masonry-portfolio/event-1.jpg" class="img-fluid" alt="荒野亂鬥活動1">
           <div class="portfolio-info">
-            <h4>Branding 1</h4>
-            <p>Transforming brands through cutting-edge web solutions.</p>
-            <a href="assets/img/masonry-portfolio/masonry-portfolio-3.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-            <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+            <h4>活動 1</h4>
+            <p>特別策劃的遊戲活動。</p>
+            <a href="assets/img/masonry-portfolio/event-1.jpg" title="活動 1" data-gallery="portfolio-gallery-events" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            <a href="portfolio-details.html" title="更多細節" class="details-link"><i class="bi bi-link-45deg"></i></a>
           </div>
         </div><!-- End Portfolio Item -->
 
@@ -394,8 +394,8 @@
 
   <!-- Section Title -->
   <div class="container section-title" data-aos="fade-up">
-    <h2>Testimonials</h2>
-    <p>What our clients say about us.</p>
+    <h2>玩家評價</h2>
+    <p>看看玩家們對荒野亂鬥的評價。</p>
   </div><!-- End Section Title -->
 
   <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -432,12 +432,12 @@
           <div class="testimonial-item">
             <p>
               <i class="bi bi-quote quote-icon-left"></i>
-              <span>The team provided exceptional service and transformed our vision into reality.</span>
+              <span>這款遊戲讓我愛不釋手，無論是角色還是地圖都設計得非常用心！</span>
               <i class="bi bi-quote quote-icon-right"></i>
             </p>
-            <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="Saul Goodman">
-            <h3>Saul Goodman</h3>
-            <h4>Ceo &amp; Founder</h4>
+            <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="玩家1">
+            <h3>玩家 1</h3>
+            <h4>遊戲愛好者</h4>
           </div>
         </div><!-- End testimonial item -->
 
@@ -445,12 +445,12 @@
           <div class="testimonial-item">
             <p>
               <i class="bi bi-quote quote-icon-left"></i>
-              <span>Creative, professional, and always on time. Highly recommended!</span>
+              <span>荒野亂鬥的多樣性和趣味性讓人無法抗拒，每天都充滿期待！</span>
               <i class="bi bi-quote quote-icon-right"></i>
             </p>
-            <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="Sara Wilsson">
-            <h3>Sara Wilsson</h3>
-            <h4>Designer</h4>
+            <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="玩家2">
+            <h3>玩家 2</h3>
+            <h4>競技玩家</h4>
           </div>
         </div><!-- End testimonial item -->
 
@@ -458,12 +458,12 @@
           <div class="testimonial-item">
             <p>
               <i class="bi bi-quote quote-icon-left"></i>
-              <span>Their attention to detail and innovative approach exceeded our expectations.</span>
+              <span>這是一款結合策略與動作的傑作，讓我和朋友們玩得非常盡興！</span>
               <i class="bi bi-quote quote-icon-right"></i>
             </p>
-            <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="Jena Karlis">
-            <h3>Jena Karlis</h3>
-            <h4>Store Owner</h4>
+            <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="玩家3">
+            <h3>玩家 3</h3>
+            <h4>社交玩家</h4>
           </div>
         </div><!-- End testimonial item -->
 
@@ -474,6 +474,7 @@
   </div>
 
 </section><!-- /Testimonials Section -->
+
 
 
     <!-- Contact Section -->
