--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>荒野亂鬥 Brawl stars 遊戲介紹</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="荒野亂鬥 (Brawl Stars) 是一款快節奏的多人競技遊戲。本頁介紹遊戲玩法、角色攻略與最新資訊。">
+  <meta name="keywords" content="荒野亂鬥, Brawl Stars, 手遊介紹, 遊戲攻略, 遊戲技巧">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
