--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@
 
   <!-- Section Title -->
   <div class="container section-title" data-aos="fade-up">
-    <h2>荒野亂鬥作品集</h2>
-    <p>探索我們的荒野亂鬥主題創意作品，展示獨特的設計與專業技術。</p>
+    <h2>Brawl Stars Portfolio</h2>
+    <p>Explore our creative works themed around Brawl Stars, showcasing unique designs and professional expertise.</p>
   </div><!-- End Section Title -->
 
   <div class="container">
@@ -343,41 +343,41 @@
     <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
       <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
-        <li data-filter="*" class="filter-active">全部</li>
-        <li data-filter=".filter-brawlers">英雄</li>
-        <li data-filter=".filter-maps">地圖</li>
-        <li data-filter=".filter-events">活動</li>
+        <li data-filter="*" class="filter-active">All</li>
+        <li data-filter=".filter-brawlers">Brawlers</li>
+        <li data-filter=".filter-maps">Maps</li>
+        <li data-filter=".filter-events">Events</li>
       </ul><!-- End Portfolio Filters -->
 
       <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
         <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-brawlers">
-          <img src="assets/img/masonry-portfolio/brawler-1.jpg" class="img-fluid" alt="荒野亂鬥英雄1">
+          <img src="assets/img/masonry-portfolio/brawler-1.jpg" class="img-fluid" alt="Brawler 1">
           <div class="portfolio-info">
-            <h4>英雄 1</h4>
-            <p>荒野亂鬥中的經典角色設計。</p>
-            <a href="assets/img/masonry-portfolio/brawler-1.jpg" title="英雄 1" data-gallery="portfolio-gallery-brawlers" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-            <a href="portfolio-details.html" title="更多細節" class="details-link"><i class="bi bi-link-45deg"></i></a>
+            <h4>Brawler 1</h4>
+            <p>Classic character design from Brawl Stars.</p>
+            <a href="assets/img/masonry-portfolio/brawler-1.jpg" title="Brawler 1" data-gallery="portfolio-gallery-brawlers" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
           </div>
         </div><!-- End Portfolio Item -->
 
         <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-maps">
-          <img src="assets/img/masonry-portfolio/map-1.jpg" class="img-fluid" alt="荒野亂鬥地圖1">
+          <img src="assets/img/masonry-portfolio/map-1.jpg" class="img-fluid" alt="Map 1">
           <div class="portfolio-info">
-            <h4>地圖 1</h4>
-            <p>設計巧妙的戰鬥場景。</p>
-            <a href="assets/img/masonry-portfolio/map-1.jpg" title="地圖 1" data-gallery="portfolio-gallery-maps" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-            <a href="portfolio-details.html" title="更多細節" class="details-link"><i class="bi bi-link-45deg"></i></a>
+            <h4>Map 1</h4>
+            <p>Ingeniously designed battle scenes.</p>
+            <a href="assets/img/masonry-portfolio/map-1.jpg" title="Map 1" data-gallery="portfolio-gallery-maps" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
           </div>
         </div><!-- End Portfolio Item -->
 
         <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-events">
-          <img src="assets/img/masonry-portfolio/event-1.jpg" class="img-fluid" alt="荒野亂鬥活動1">
+          <img src="assets/img/masonry-portfolio/event-1.jpg" class="img-fluid" alt="Event 1">
           <div class="portfolio-info">
-            <h4>活動 1</h4>
-            <p>特別策劃的遊戲活動。</p>
-            <a href="assets/img/masonry-portfolio/event-1.jpg" title="活動 1" data-gallery="portfolio-gallery-events" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-            <a href="portfolio-details.html" title="更多細節" class="details-link"><i class="bi bi-link-45deg"></i></a>
+            <h4>Event 1</h4>
+            <p>Specially planned game events.</p>
+            <a href="assets/img/masonry-portfolio/event-1.jpg" title="Event 1" data-gallery="portfolio-gallery-events" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
           </div>
         </div><!-- End Portfolio Item -->
 
@@ -394,8 +394,8 @@
 
   <!-- Section Title -->
   <div class="container section-title" data-aos="fade-up">
-    <h2>玩家評價</h2>
-    <p>看看玩家們對荒野亂鬥的評價。</p>
+    <h2>Player Reviews</h2>
+    <p>See what players are saying about Brawl Stars.</p>
   </div><!-- End Section Title -->
 
   <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -432,12 +432,12 @@
           <div class="testimonial-item">
             <p>
               <i class="bi bi-quote quote-icon-left"></i>
-              <span>這款遊戲讓我愛不釋手，無論是角色還是地圖都設計得非常用心！</span>
+              <span>This game is addictive! Both the characters and maps are designed with great care.</span>
               <i class="bi bi-quote quote-icon-right"></i>
             </p>
-            <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="玩家1">
-            <h3>玩家 1</h3>
-            <h4>遊戲愛好者</h4>
+            <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="Player 1">
+            <h3>Player 1</h3>
+            <h4>Game Enthusiast</h4>
           </div>
         </div><!-- End testimonial item -->
 
@@ -445,12 +445,12 @@
           <div class="testimonial-item">
             <p>
               <i class="bi bi-quote quote-icon-left"></i>
-              <span>荒野亂鬥的多樣性和趣味性讓人無法抗拒，每天都充滿期待！</span>
+              <span>The variety and fun of Brawl Stars make it irresistible! I look forward to playing every day.</span>
               <i class="bi bi-quote quote-icon-right"></i>
             </p>
-            <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="玩家2">
-            <h3>玩家 2</h3>
-            <h4>競技玩家</h4>
+            <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="Player 2">
+            <h3>Player 2</h3>
+            <h4>Competitive Player</h4>
           </div>
         </div><!-- End testimonial item -->
 
@@ -458,12 +458,12 @@
           <div class="testimonial-item">
             <p>
               <i class="bi bi-quote quote-icon-left"></i>
-              <span>這是一款結合策略與動作的傑作，讓我和朋友們玩得非常盡興！</span>
+              <span>This is a masterpiece combining strategy and action, making it so much fun to play with friends!</span>
               <i class="bi bi-quote quote-icon-right"></i>
             </p>
-            <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="玩家3">
-            <h3>玩家 3</h3>
-            <h4>社交玩家</h4>
+            <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="Player 3">
+            <h3>Player 3</h3>
+            <h4>Social Gamer</h4>
           </div>
         </div><!-- End testimonial item -->
 
@@ -475,85 +475,38 @@
 
 </section><!-- /Testimonials Section -->
 
+<!-- Contact Section -->
+<section id="contact" class="contact section">
 
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Contact</h2>
+    <p>Get in touch with us to share your suggestions and thoughts about Brawl Stars.</p>
+  </div><!-- End Section Title -->
 
-    <!-- Contact Section -->
-    <section id="contact" class="contact section">
+  <div class="container" data-aos="fade" data-aos-delay="100">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-        <p>聯繫我們，分享您對《荒野亂鬥》的建議與想法。</p>
-      </div><!-- End Section Title -->
+    <div class="row gy-4">
 
-      <div class="container" data-aos="fade" data-aos-delay="100">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-4">
-            <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
-              <i class="bi bi-geo-alt flex-shrink-0"></i>
-              <div>
-                <h3>總部地址</h3>
-                <p>123 荒野大道，亂鬥市，遊戲國 12345</p>
-              </div>
-            </div><!-- End Info Item -->
-
-            <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
-              <i class="bi bi-telephone flex-shrink-0"></i>
-              <div>
-                <h3>聯絡電話</h3>
-                <p>+1 800-123-4567</p>
-              </div>
-            </div><!-- End Info Item -->
-
-            <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
-              <i class="bi bi-envelope flex-shrink-0"></i>
-              <div>
-                <h3>電子郵件</h3>
-                <p>support@brawlstars.com</p>
-              </div>
-            </div><!-- End Info Item -->
-
+      <div class="col-lg-4">
+        <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
+          <i class="bi bi-geo-alt flex-shrink-0"></i>
+          <div>
+            <h3>Headquarters</h3>
+            <p>123 Brawl Street, Star City, Game Country 12345</p>
           </div>
+        </div><!-- End Info Item -->
 
-          <div class="col-lg-8">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-              <div class="row gy-4">
+        <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
+          <i class="bi bi-telephone flex-shrink-0"></i>
+          <div>
+            <h3>Contact Phone</h3>
+            <p>+1 800-123-4567</p>
+          </div>
+        </div><!-- End Info Item -->
 
-                <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="您的名字" required="">
-                </div>
+        <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
 
-                <div class="col-md-6 ">
-                  <input type="email" class="form-control" name="email" placeholder="您的電子郵件" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <input type="text" class="form-control" name="subject" placeholder="主題" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="留言內容" required=""></textarea>
-                </div>
-
-                <div class="col-md-12 text-center">
-                  <div class="loading">加載中...</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">您的留言已發送，感謝您的支持！</div>
-
-                  <button type="submit">發送留言</button>
-                </div>
-
-              </div>
-            </form>
-          </div><!-- End Contact Form -->
-
-        </div>
-
-      </div>
-
-    </section><!-- /Contact Section -->
 
 
   </main>
