--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <div class="container" data-aos="fade-up" data-aos-delay="100">
     <div class="row gy-4 justify-content-center">
       <div class="col-lg-4">
-        <img src="assets/img/brawl-stars-logo.jpg" class="img-fluid" alt="Brawl Stars Logo">
+        <img src="https://supercell.com/images/1181b23832134c15aefecb7efacbc2ad/bg_intro_brawlstars.31c1276f.webp" class="img-fluid" alt="Brawl Stars Logo">
       </div>
       <div class="col-lg-8 content">
         <h2>Multiplayer Battles &amp; Unique Characters</h2>
