--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="荒野亂鬥, Brawl Stars, 手遊介紹, 遊戲攻略, 遊戲技巧">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="https://supercell.com/images/1a5b69311180a4a1c374e10556941f05/1681/hero_bg_brawlstars.a385872a.webp" rel="icon">
   <link href="https://iplaygame91.com/media/catalog/product/f/i/file_4_28.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
