--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <img src="https://supercell.com/images/1a5b69311180a4a1c374e10556941f05/1681/hero_bg_brawlstars.a385872a.webp" alt="">
+
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Lonely</h1>
+        <h1 class="sitename">Brawl stars!</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
